--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 				<!-- External Card -->
 				<div class="card text-center mt-4 animate__animated animate__fadeInUp">
 					<div class="card-body">
-						<h5 class="card-title"><i class="fas fa-robot"></i>Volaris External</h5>
+						<h5 class="card-title"><i class="fas fa-robot"></i>Volarium</h5>
 						<p class="card-text">Our Roblox esp/aimbot, coming soon.</p>
 						<button class="btn btn-primary" disabled><i class="fas fa-clock"></i> Coming Soon</button>
 					</div>
